--- a/gradle.properties
+++ b/gradle.properties
@@ -7,11 +7,11 @@ eventuateMavenRepoUrl=https://dl.bintray.com/eventuateio-oss/eventuate-maven-rel
 springBootVersion=2.1.5.RELEASE
 
 eventuateExamplesBaseImageVersion=BUILD-6
-eventuatePlatformVersion=2020.4.BUILD-SNAPSHOT
-eventuateUtilVersion=0.8.0.BUILD-SNAPSHOT
+eventuatePlatformVersion=2021.2.RELEASE
+eventuateUtilVersion=0.9.0.RELEASE
 dockerComposePluginVersion=0.4.5
-eventuateMessagingKafkaVersion=0.13.0.BUILD-SNAPSHOT
+eventuateMessagingKafkaVersion=0.13.0.RELEASE
 version=0.1.0-SNAPSHOT
 
-eventuateCommonImageVersion=0.13.0.BUILD-SNAPSHOT
-eventuateCdcImageVersion=0.10.0.BUILD-SNAPSHOT
+eventuateCommonImageVersion=0.13.0.RELEASE
+eventuateCdcImageVersion=0.11.0.RELEASE
