--- a/gradle.properties
+++ b/gradle.properties
@@ -8,11 +8,11 @@ springBootVersion=2.1.5.RELEASE
 micronautVersion=2.4.1
 
 eventuateExamplesBaseImageVersion=BUILD-6
-eventuatePlatformVersion=2021.2.BUILD-SNAPSHOT
-eventuateUtilVersion=0.9.0.RELEASE
+eventuatePlatformVersion=2021.3.BUILD-SNAPSHOT
+eventuateUtilVersion=0.10.0.BUILD-SNAPSHOT
 dockerComposePluginVersion=0.4.5
-eventuateMessagingKafkaVersion=0.13.0.BUILD-SNAPSHOT
+eventuateMessagingKafkaVersion=0.14.0.BUILD-SNAPSHOT
 version=0.1.0-SNAPSHOT
 
-eventuateCommonImageVersion=0.13.0.RELEASE
-eventuateCdcImageVersion=0.11.0.RELEASE
+eventuateCommonImageVersion=0.14.0.BUILD-SNAPSHOT
+eventuateCdcImageVersion=0.12.0.BUILD-SNAPSHOT
