--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ micronautVersion=2.4.1
 
 eventuateExamplesBaseImageVersion=BUILD-6
 eventuatePlatformVersion=2021.3.RELEASE
-eventuateUtilVersion=0.11.0.BUILD-SNAPSHOT
+eventuateUtilVersion=0.11.0.RELEASE
 dockerComposePluginVersion=0.4.5
 eventuateMessagingKafkaVersion=0.14.0.RELEASE
 version=0.1.0-SNAPSHOT
